# prepare_for_offline

./: .gitignore  README.md
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  security.py
backend/app/routes/: ask.py  chat.py  command.py  contexts.py  conversations.py  health.py  ingest.py  neural.py  packs.py  prepare.py  queue.py  settings.py  trips.py
backend/app/services/: answerer.py  attachment_text.py  bundled_runtime.py  commands.py  contexts.py  conversations.py  expert_loader.py  factual_packs.py  jobs.py  (+33 more)
backend/eval/: compile_followup_candidates.py  compile_leakage_free.py  country_preparation_development.json  dataset.py  followup_cases.json  followup_programs.json  followup_report.json  followup_specs.py  language_generalization.json  last_compiler_report.json  last_report.json  last_travel_report.json  leakage_free_programs.json  leakage_free_specs.py  neural_report.json  neural_routes.json  prepared_ottoman.json  run_compiler_eval.py  run_country_facts_eval.py  run_eval.py  run_followup_eval.py  run_language_generalization.py  run_leakage_free_eval.py  run_neural_matrix.py  run_prepared_lift.py  run_prepared_ottoman_eval.py  run_router_eval.py  run_subject_oracle_eval.py  run_travel_eval.py  travel_dataset.py
backend/scripts/: compile_global_programs.py  compile_neural_programs.py  export_question_candidates.py
backend/tests/: conftest.py  test_command_router.py  test_compiler_promotion.py  test_country_facts_benchmark.py  test_factual_packs.py  test_full_flow.py  test_neural_api.py  test_preparation.py  test_product_api.py  test_safe_source_fetcher.py  test_source_acquisition.py  test_source_queries.py  test_source_ranking_freshness.py  test_source_search.py  test_travel_pipeline.py  test_trip_acquisition_integration.py  test_two_page_e2e.py
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
(+68 files in other folders)
