[project]
name = "prepare-for-offline"
version = "0.1.0"
description = "Anticipatory offline assistant: compile PAW experts + tiered local knowledge before disconnection, then answer locally with cited evidence."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "programasweights>=0.4.2",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
