[project]
name = "prepare-for-offline"
version = "0.4.0"
description = "PAW Offline: compile neural programs online, ask them locally."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "programasweights>=0.4.2",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
